fixed spacing issue for similar movies component

--- a/src/style/sections/_movie-reviews.scss
+++ b/src/style/sections/_movie-reviews.scss
@@ -4,6 +4,14 @@
 	@include respond(900) {
 		flex-wrap: wrap;
 	}
+
+	@include respond(1300) {
+		padding: 0 5rem;
+	}
+
+	@include respond(1800) {
+		padding: 0 10rem;
+	}
 }
 
 .movie-reviews {
@@ -13,14 +21,6 @@
 
 	@include respond(600) {
 		justify-content: center;
-	}
-
-	@include respond(1300) {
-		padding: 0 5rem;
-	}
-
-	@include respond(1800) {
-		padding: 0 10rem;
 	}
 
 	&__loading > img {
@@ -91,16 +91,17 @@
 	&__similar-movies-list {
 		margin: 0 5rem 1.5rem auto;
 		display: grid;
-		gap: 1rem;
+		column-gap: 1rem;
+		row-gap: 0.5rem;
 		grid-template-rows: 2.5rem 1fr;
-		grid-template-columns: repeat(2, minmax(15rem, 1fr));
-
-		@include respond(1300) {
-			margin-right: 10rem;
-		}
+		grid-template-columns: repeat(2, 1fr);
 
 		@include respond(1100) {
 			margin-left: 5rem;
+		}
+
+		@include respond(900) {
+			grid-template-columns: repeat(2, minmax(15rem, 1fr));
 		}
 
 		@include respond(500) {
@@ -121,10 +122,15 @@
 		}
 	}
 
-	// .item-0 {
-	// 	grid-column: 1 / 3;
-	// 	grid-row: 2 / 3;
-	// }
+	.item-0 {
+		grid-column: 1 / 2;
+		grid-row: 2 / 3;
+	}
+
+	.item-1 {
+		grid-column: 1 / 3;
+		grid-row: 2 / 3;
+	}
 
 	&__similar-movie {
 		cursor: pointer;
